리덕스 사용 버전

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,14 @@
 {
-    "compilerOptions": {
-        "baseUrl": "./pages"
-    },
-    "include": [
-        "pages/**/*.js",
-        "redux/**/*.ts"
-      ],
-      "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-      ]
+  "compilerOptions": {
+      "baseUrl": "./pages",
+      "paths":{"@/*": ["*"]}
+  },
+  "include": [
+      "pages/**/*.js",
+      "redux/**/*.ts"
+    ],
+    "exclude": [
+      "node_modules",
+      "**/*.spec.ts"
+    ]
 }
