--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
-    "@mui/styled-engine-sc": "^5.6.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/styled-engine-sc": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.1",
+    "@mui/material": "^5.6.3",
     "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.24",
     "eslint": "8.2.0",
